--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,2 +1,10 @@
 [general]
 REPLICATE_API_TOKEN = "your_replicate_api_token_here"
+
+[snowflake]
+user = "SYEDSNOWSPEE"
+password = "BlyatCyka69240"
+account = "arwpkkx-kr26430"
+database = "healthcare_db"
+schema = "patient_data"
+role = "ACCOUNTADMIN"
